tests/unit-fail-compilation/j502a.ref
j502a.c:3:2: error: if one of a conditional expression's branches has void type, the other must also have void type.
  Constraint violation (CV-TTE4). See C11 sec. 6.5.15:3
Translation failed (config dumped). Run kcc -d j502a.c to see commands run.
