tests/unit-fail-compilation/j502a.c

int main(void){
	5 ? (void)5 : (signed char)6;
}
